--- a/index.html
+++ b/index.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SR joy portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style/portfolio.css">
 </head>
-<body>
-    
+<body class="front-open-sans">
+    <header>
+        <nav>
+            <div class="logo">
+                <h2>Ma<span class="color-orange">r</span>y</h2>
+            </div>
+            <ul class="menu">
+                <li><a href="">Portfilio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><button class="btn">Hire me </button></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
