--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 </head>
 <body class="front-open-sans">
     <header>
-        <nav>
+        <nav class="container">
             <div class="logo">
                 <h2>Ma<span class="color-orange">r</span>y</h2>
             </div>
             <ul class="menu">
-                <li><a href="">Portfilio</a></li>
+                <li><a href="">Portfolio</a></li>
                 <li><a href="">Blog</a></li>
                 <li><button class="btn">Hire me </button></li>
             </ul>
@@ -31,7 +31,7 @@
                 <h1>Mary Hardy</h1>
                 <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <div>
-                    <button class="btn"><i class="fa-solid fa-download"></i> Download CV</button>
+                    <button class="btn"><i class="fa-solid fa-download"></i>Download CV</button>
                     <button class="btn"><i class="fa-solid fa-phone"></i> Contact</button>
                 </div>
             </div>
@@ -43,7 +43,7 @@
     </header>
 
     <section id="about">
-        <div class="about-container">
+        <div class="about-container container">
             <div class="section-heading">
                 <h2>About me</h2>
                 <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
@@ -72,7 +72,7 @@
     </section>
 
     <section id="skills">
-        <div class="skills-container">
+        <div class="skills-container container">
             <div class="section-heading">
                 <h2>What I do</h2>
                 <p>I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
@@ -107,7 +107,7 @@
         <div class="section-heading">
             <h2>A summary of My Resume</h2>
         </div>
-        <div class="resume-contaier">
+        <div class="resume-contaier container">
             <div class="educattion">
                 <h2 class="section-title">My Education</h2>
                 <div class="resume-card">
@@ -165,7 +165,7 @@
     </section>
 
     <footer>
-        <section class="footer-container">
+        <section class="footer-container container">
             <div class="social">
                 <h2>Lets Connect</h2>
                 <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
